--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
 
     <link rel="shortcut icon" href="favicon.png" />
 
@@ -43,7 +44,7 @@
             <h2><small>常用螺纹切削进给次数与切削深度（公制螺纹）</small></h2>
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-5 col-xs-offset-4">
+                    <div class="col-md-5 col-md-offset-4">
                         <span><strong>螺距(mm)：</strong></span>
                         <div class="btn-group">
                             <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -57,16 +58,16 @@
                 </div>
                 <br />
                 <div class="row">
-                    <div class="col-xs-5 col-xs-offset-4">
+                    <div class="col-md-5 col-md-offset-4">
                         牙深(半径值)：{{yashen}}
                     </div>
                 </div>
                 <br />
                 <div class="row">
-                    <div class="col-xs-5 col-xs-offset-4">切削次数及背吃刀量(直径值)：</div>
+                    <div class="col-md-5 col-md-offset-4">切削次数及背吃刀量(直径值)：</div>
                 </div>
                 <div class="row" v-for="cd in chidao">
-                    <div class="col-xs-5 col-xs-offset-4">第{{cd.index}}次：{{cd.value}}</div>
+                    <div class="col-md-5 col-md-offset-4">第{{cd.index}}次：{{cd.value}}</div>
                 </div>
             </div>
         </div>
@@ -75,7 +76,7 @@
         <div id="tab2" v-if="active">
             <h2><small>数控车削切削用量参考数据</small></h2>
             <div class="row">
-                <div class="col-xs-5 col-xs-offset-2">
+                <div class="col-md-5 col-md-offset-2">
                     <span><strong>工件材料：</strong></span>
                     <div class="btn-group">
                         <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -86,7 +87,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xs-5">
+                <div class="col-md-5">
                     <span><strong>加工方式：</strong></span>
                     <div class="btn-group">
                         <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -100,12 +101,12 @@
             </div>
             <br />
             <div class="row">
-                <div class="col-xs-5 col-xs-offset-2">背吃刀量(mm)：{{dataline[2]}}</div>
-                <div class="col-xs-5">切削速度(m/min)：{{dataline[3]}}</div>
+                <div class="col-md-5 col-md-offset-2">背吃刀量(mm)：{{dataline[2]}}</div>
+                <div class="col-md-5">切削速度(m/min)：{{dataline[3]}}</div>
             </div>
             <div class="row">
-                <div class="col-xs-5 col-xs-offset-2">进给量(mm/r)：{{dataline[4]}}</div>
-                <div class="col-xs-5">刀具材料：{{dataline[5]}}</div>
+                <div class="col-md-5 col-md-offset-2">进给量(mm/r)：{{dataline[4]}}</div>
+                <div class="col-md-5">刀具材料：{{dataline[5]}}</div>
             </div>
         </div>
     </div>
