--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="page-header">
-        <h1>数控车切削参数</h1>
+        <h1>数控加工切削参数</h1>
     </div>
 
     <nav id="navigator">
